www/css/main.dark.css
/* ... */
indoorred1 {
  background: rgba(211, 93, 78, 1)
}

indoororange1 {
  background: #ff7c39
}

indoorgreen1 {
  background: #90b12a
}

.weather34indoorword {
  margin-left: 93px;
  margin-top: 26px;
  color: silver;
  font-size: .55rem;
  font-family: arial, system;
  position: absolute
}

.homeindoorhum0-25,
.homeindoorhum25-35,
.homeindoorhum35-60,
.homeindoorhum60-80,
.homeindoorhum80-100 {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 1.1rem;
  width: 4rem;
  border: 2px solid rgba(56, 56, 60, 1);
  overflow: hidden;
  border-radius: 2px;
  color: #fff;
  line-height: 16px;
  font-family: weathertext2, Helvetica, system;
  font-size: .9em;
  margin-top: -30px;
  margin-left: 165px
}

.homeindoorhum80-100 {
  background: rgba(0, 164, 180, 1);
  background: -webkit-linear-gradient(270deg, #00a4b4, #087883);
  background: -o-linear-gradient(270deg, #00a4b4, #087883);
  background: -moz-linear-gradient(270deg, #00a4b4, #087883);
  background: -ms-linear-gradient(270deg, #00a4b4, #087883);
  background: linear-gradient(270deg, #00a4b4, #087883)
}

.homeindoorhum60-80 {
  background: #3b9cac;
  background: -webkit-linear-gradient(90deg, #90b12a, #3b9cac);
  background: -o-linear-gradient(90deg, #90b12a, #3b9cac);
  background: -moz-linear-gradient(90deg, #90b12a, #3b9cac);
  background: -ms-linear-gradient(90deg, #90b12a, #3b9cac);
  background: linear-gradient(90deg, #90b12a, #3b9cac)
}

.homeindoorhum35-60 {
  background: #90b12a;
  background: -webkit-linear-gradient(90deg, #90b12a, #e6a141);
  background: -o-linear-gradient(90deg, #90b12a, #e6a141);
  background: -moz-linear-gradient(90deg, #90b12a, #e6a141);
  background: -ms-linear-gradient(90deg, #90b12a, #e6a141);
  background: linear-gradient(90deg, #90b12a, #e6a141)
}

.homeindoorhum25-35 {
  background: -webkit-linear-gradient(90deg, #d86858, #90b12a);
  background: -o-linear-gradient(90deg, #d86858, #90b12a);
  background: -moz-linear-gradient(90deg, #d86858, #90b12a);
  background: -ms-linear-gradient(90deg, #d86858, #90b12a);
  background: linear-gradient(90deg, #d86858, #90b12a)
}

.homeindoorhum0-25 {
  background: #d05f2d;
  background: -webkit-linear-gradient(90deg, #d35d4e, #d05f2d);
  background: -o-linear-gradient(90deg, #d35d4e, #d05f2d);
  background: -moz-linear-gradient(90deg, #d35d4e, #d05f2d);
  background: -ms-linear-gradient(90deg, #d35d4e, #d05f2d);
  background: linear-gradient(90deg, #d35d4e, #d05f2d)
}

.weather34indoorhumrate,
weather34feelsrate {
  position: absolute;
  margin-top: -5px;
  font-size: 12px;
  max-height: 100px;
  font-family: arial, system
}

.weather34indoorhumrate {
  color: #bbb;
  margin-left: 24px
}

.weather34indoorhumrate span {
  color: #bbb;
  font-family: arial, system
}

.weather34feelsrate {
  color: #bbb;
  margin-left: 246px
}

.weather34feelsrate span {
  color: #bbb;
  font-family: arial, system
}

.feelsindoorcircleblue,
.raintoday1,
.suncircleblue,
indoorblue1,
topblue1 {
  background: #3b9cac
}

.indoorhomesvg1 {
  margin-top: -12px;
  left: 0;
  margin-left: -86px;
  color: #38383c
}

.updatedtime,
.updatedtimealert,
.updatedtimecurrent,
.updatedtimedir,
.updatedtimeuv {
  width: 75px;
  text-align: center
}

.updatedtime,
.updatedtimeuv {
  font: .65em weathertext2;
  margin-left: 235px;
  color: silver;
  background: 0;
  padding: 3px
}

.updatedtime,
updatedtime1 {
  margin-top: -18px;
  line-height: 10px
}

.updatedtimeuv {
  margin-top: -112px;
  line-height: 10px
}

.updatedtimeuv span {
  color: silver
}

.updatedtimecurrent {
  margin-top: -18px;
  margin-left: 235px;
  color: silver;
  font: .65em weathertext2;
  line-height: 10px;
  background: 0;
  padding: 3px
}

.updatedtimealert {
  margin-top: 5px;
  margin-left: 215px;
  color: silver;
  font: .65em weathertext2;
  line-height: 10px
}

.updatedtimedir {
  margin-top: -25px;
  margin-left: 135px;
  position: absolute;
  color: silver;
  font: .65em weathertext2;
  line-height: 10px;
  border-radius: 2px;
  background: 0;
  padding: 3px
}

updatedtime {
  position: absolute
}

.updatedtime span,
.updatedtimealert span,
.updatedtimecurrent span,
.updatedtimedir span {
  margin-bottom: 0;
  color: silver;
  font-family: weathertext2;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -moz-font-smoothing: antialiased;
}

.homeweatherstationlogo {
  margin-top: -15px;
  margin-left: 50px
}

weather34 {
  font: .55em weathertext2;
  margin-top: -4px;
  margin-left: 45px;
  display: block;
  width: 100px
}

valueearthquake {
  font-size: .55rem;
  line-height: 10px
}

alertvalue {
  font-size: .75rem;
  margin-left: -10px;
  margin-top: 10px
  
}

spanefreezing,
spanelightning {
  font-size: 12px;
  font-family: Arial, system;
  top: 33px;
  width: 120px;
  position: absolute;
  font-weight: 400;
  left: 50px
}

alertadvisory {
  margin-left: -55px;
  position: absolute
}

alertadvisory2 {
  margin-left: -75px;
  position: absolute
}
valuewindunit {
  font-size: .55rem
}

.inheatcircle-content {
  position: absolute;
  color: silver;
  float: left;
  margin-left: -4px;
  padding: 0;
  text-align: center;
  width: 160px;
  font: 500 11px weathertext2;
  display: block;
  line-height: 15px
}

.heatcircle6 {
  padding: 0;
  width: 170px;
  position: absolute;
  margin-top: -35px;
  margin-left: 140px
}

.inheatcircle2-content {
  position: absolute;
  color: silver;
  float: left;
  margin-top: 35px;
  margin-left: -5px;
  padding: 0;
  text-align: center;
  width: 160px;
  font: 500 11px weathertext2;
  display: block;
  line-height: 15px
}

.heatcircle7 {
  padding: 0;
  width: 170px;
  position: relative;
  margin-top: 50px;
  margin-left: 49px
}
/* ... */

